final updates for python challenge

--- a/PyBank/PyBank.ipynb
+++ b/PyBank/PyBank.ipynb
@@ -2,88 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "4451d5b6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import csv\n",
-    "\n",
-    "csvpath = os.path.join('.', 'Resources', 'budget_data.csv')\n",
-    "\n",
-    "with open(csvpath, 'r') as file_handler:\n",
-    "    lines = file_handler.read()\n",
-    "  \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "8556df22",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dates_list = []\n",
-    "gains_list = []\n",
-    "\n",
-    "chopped_into_rows = lines.split(\"\\n\")\n",
-    "\n",
-    "\n",
-    "for row in chopped_into_rows:\n",
-    "    \n",
-    "    chopped_into_cols = row.split(\",\")\n",
-    "    date = chopped_into_cols[0]\n",
-    "    gain = chopped_into_cols[1]\n",
-    "    \n",
-    "\n",
-    "    if \"Date\" in date:\n",
-    "        continue\n",
-    "    if \"Profit/Losses\" in gain:\n",
-    "        continue\n",
-    "    \n",
-    "    dates_list.append(date)\n",
-    "    gains_list.append(float(gain))\n",
-    "  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "4c137e7f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "delta_list = []\n",
-    "\n",
-    "for i in range(len(gains_list)-1):\n",
-    "        \n",
-    "    delta = gains_list[i] - gains_list[i-1] \n",
-    "    delta_list.append(delta)\n",
-    "    \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "4c17a61b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output = (\n",
-    "    f\"Total Months: {len(dates_list)}\\n\"\n",
-    "    f\"Total: {sum(gains_list)}\\n\"\n",
-    "    f\"Average Change: {round(sum(delta_list) / len(delta_list),2)}\\n\"\n",
-    "    f\"Total: {dates_list[delta_list.index(max(delta_list))]} {max(delta_list)}\\n\"\n",
-    "    f\"Total: {dates_list[delta_list.index(min(delta_list))]} {min(delta_list)}\\n\"\n",
-    ")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "0ce7a741",
+   "execution_count": 22,
+   "id": "6a6d6a9b",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +12,7 @@
      "text": [
       "Total Months: 86\n",
       "Total: 22564198.0\n",
-      "Average Change: 2643.16\n",
+      "Average Change: -8311.11\n",
       "Total: Aug-16 1862002.0\n",
       "Total: Feb-14 -1825558.0\n",
       "\n"
@@ -100,16 +20,42 @@
     }
    ],
    "source": [
-    "print(output)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "5e316607",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import os\n",
+    "import csv\n",
+    "\n",
+    "csvpath = os.path.join('.', 'Resources', 'budget_data.csv')\n",
+    "\n",
+    "with open(csvpath, 'r') as file_handler:\n",
+    "    csvreader = csv.reader(file_handler, delimiter=',')\n",
+    "    csv_header = next(csvreader)\n",
+    "\n",
+    "    dates_list = []\n",
+    "    gains_list = []\n",
+    "\n",
+    "    for row in csvreader:\n",
+    "        date = row[0]\n",
+    "        gain = row[1]\n",
+    "    \n",
+    "        dates_list.append(date)\n",
+    "        gains_list.append(float(gain))\n",
+    "\n",
+    "delta_list_2 = []\n",
+    "\n",
+    "for i in range(len(gains_list)-1):\n",
+    "\n",
+    "    delta_2 = gains_list[i+1] - gains_list[i]\n",
+    "    delta_list_2.append(delta_2)\n",
+    "\n",
+    "output = (\n",
+    "    f\"Total Months: {len(dates_list)}\\n\"\n",
+    "    f\"Total: {sum(gains_list)}\\n\"\n",
+    "    f\"Average Change: {round((sum(delta_list_2) / len(delta_list_2)),2)}\\n\"\n",
+    "    f\"Total: {dates_list[delta_list_2.index(max(delta_list_2))+1]} {max(delta_list_2)}\\n\"\n",
+    "    f\"Total: {dates_list[delta_list_2.index(min(delta_list_2))+1]} {min(delta_list_2)}\\n\"\n",
+    ")\n",
+    "\n",
+    "print(output)\n",
+    "\n",
     "txt_file_path = os.path.join(\"./analysis/PyBank_Analysis.txt\")\n",
     "\n",
     "# print(txt_file_path)\n",
@@ -117,14 +63,13 @@
     "with open(txt_file_path, 'w') as txt_file:\n",
     "    txt_file.write(output)\n",
     "    \n",
-    "    \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7151176",
+   "id": "7b0d1626",
    "metadata": {},
    "outputs": [],
    "source": []
